welcome.lessons.welcome.array.array667.Array667.scala.error
array667:12: error: ';' expected but ',' found.
 	return nb66,nb67
                   ^